# imagemagick-image-optimizer

./: .gitignore  LICENSE  README.md  cli.py  core.py  optimizer.py  pyproject.toml
.github/workflows/: python-tests.yml
.jules/: bolt.md
tests/: test_optimizer.py
