[project]
name = "imagemagick-image-optimizer"
version = "0.2.0"
description = "Resize and optimize images with ImageMagick."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [ { name = "Alptekin" } ]

[project.scripts]
img-optimize = "cli:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ['py38']
